demo-apps/helloapp/manifests/helloweb-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 3100
    targetPort: 3100
  # type: LoadBalancer
  # loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
